@@ -1,6 +1,10 @@
 0.2.0-rc5 - unreleased
 ======================
 
+ * Applied patch from [ 1104069 ] ATCT migration -- more ordering issues
+   which fixes some more ordering issues
+   [hahnfeld]
+
  * atct_topic_view now doesn't call getObject() anymore and is a small
    bit more performant. This also takes some burden from waking up objects.
    (Bug 1079030)
